[project]
name = "expert_analyst"
version = "0.1.0"
description = "Expert_Analyst using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "crewai[google-genai,tools]==1.14.4",
    "gradio>=6.14.0",
    "litellm>=1.83.0",
]

[project.scripts]
expert_analyst = "expert_analyst.main:run"
run_crew = "expert_analyst.main:run"
train = "expert_analyst.main:train"
replay = "expert_analyst.main:replay"
test = "expert_analyst.main:test"
run_with_trigger = "expert_analyst.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
